iOS overflow-x attempted fix

--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -17,6 +17,10 @@ html {
 	overflow-x: hidden;
 }
 
+.wrapper {
+	overflow-x: hidden; // iOS overflow-x fix
+}
+
 body{
 	
 	font-family: $sans, sans-serif;
